// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`<Controls />\` renders correctly when there are multiple existing similarities. 1`] = `
<div>
  <div
    class="sc-AxjAm iudSyd"
  >
    <div
      class="sc-AxirZ deeQR"
    >
      <button
        class="sc-AxhCb sc-AxhUy cMvSSa"
      >
        Add
      </button>
    </div>
    <div
      class="sc-AxiKw dWhaZl"
    >
      <div
        class="sc-AxheI cKmSbg"
      >
        <div>
          <button
            class="sc-AxhCb sc-AxgMl djVirH"
          >
            Remove
          </button>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/a-angle"
            >
              Angle
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/a-angle"
              max="6.2832"
              min="-6.2832"
              step="0.0001"
              type="range"
              value="0.1385"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/a-angle"
              >
                0.04π
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                rad
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              -2.00π
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              2.00π
            </span>
          </div>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/a-scale"
            >
              Scale
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/a-scale"
              max="2"
              min="0"
              step="0.05"
              type="range"
              value="0.7791"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/a-scale"
              >
                0.78
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              0.00
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              2.00
            </span>
          </div>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/a-translation"
            >
              Translation
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/a-translation"
              max="1.5"
              min="0"
              step="0.05"
              type="range"
              value="0.4663"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/a-translation"
              >
                0.47
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              0.00
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              1.50
            </span>
          </div>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/a-depth"
            >
              Depth
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/a-depth"
              max="8"
              min="0"
              step="1"
              type="range"
              value="3"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/a-depth"
              >
                3
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              0
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              8
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-AxheI cKmSbg"
      >
        <div>
          <button
            class="sc-AxhCb sc-AxgMl djVirH"
          >
            Remove
          </button>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/b-angle"
            >
              Angle
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/b-angle"
              max="6.2832"
              min="-6.2832"
              step="0.0001"
              type="range"
              value="0.4692"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/b-angle"
              >
                0.15π
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                rad
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              -2.00π
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              2.00π
            </span>
          </div>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/b-scale"
            >
              Scale
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/b-scale"
              max="2"
              min="0"
              step="0.05"
              type="range"
              value="0.7202"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/b-scale"
              >
                0.72
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              0.00
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              2.00
            </span>
          </div>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/b-translation"
            >
              Translation
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/b-translation"
              max="1.5"
              min="0"
              step="0.05"
              type="range"
              value="0.7432"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/b-translation"
              >
                0.74
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              0.00
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              1.50
            </span>
          </div>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/b-depth"
            >
              Depth
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/b-depth"
              max="8"
              min="0"
              step="1"
              type="range"
              value="7"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/b-depth"
              >
                7
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              0
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              8
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`\`<Controls />\` renders correctly when there are no existing similarities 1`] = `
<div>
  <div
    class="sc-AxjAm iudSyd"
  >
    <div
      class="sc-AxirZ deeQR"
    >
      <button
        class="sc-AxhCb sc-AxhUy cMvSSa"
      >
        Add
      </button>
    </div>
    <div
      class="sc-AxiKw dWhaZl"
    />
  </div>
</div>
`;

exports[`\`<Controls />\` renders correctly when there is one existing similarity 1`] = `
<div>
  <div
    class="sc-AxjAm iudSyd"
  >
    <div
      class="sc-AxirZ deeQR"
    >
      <button
        class="sc-AxhCb sc-AxhUy cMvSSa"
      >
        Add
      </button>
    </div>
    <div
      class="sc-AxiKw dWhaZl"
    >
      <div
        class="sc-AxheI cKmSbg"
      >
        <div>
          <button
            class="sc-AxhCb sc-AxgMl djVirH"
          >
            Remove
          </button>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/subject-angle"
            >
              Angle
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/subject-angle"
              max="6.2832"
              min="-6.2832"
              step="0.0001"
              type="range"
              value="0.1385"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/subject-angle"
              >
                0.04π
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                rad
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              -2.00π
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              2.00π
            </span>
          </div>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/subject-scale"
            >
              Scale
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/subject-scale"
              max="2"
              min="0"
              step="0.05"
              type="range"
              value="0.7791"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/subject-scale"
              >
                0.78
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              0.00
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              2.00
            </span>
          </div>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/subject-translation"
            >
              Translation
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/subject-translation"
              max="1.5"
              min="0"
              step="0.05"
              type="range"
              value="0.4663"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/subject-translation"
              >
                0.47
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              0.00
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              1.50
            </span>
          </div>
        </div>
        <div
          class="sc-Axmtr eaFFFQ"
        >
          <div
            class="sc-AxmLO gVmmAl"
          >
            <label
              class="sc-fzozJi gxKHgV"
              for="test/subject-depth"
            >
              Depth
            </label>
            <input
              class="sc-fzoLsD iPLusI"
              id="test/subject-depth"
              max="8"
              min="0"
              step="1"
              type="range"
              value="3"
            />
            <span
              class="sc-fzpans kolRIK"
            >
              <output
                for="test/subject-depth"
              >
                3
              </output>
              <span
                class="sc-fznKkj ebyfUF"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-fzplWN hYlxpP"
            >
              0
            </span>
            <span
              class="sc-fznyAO fnPfHY"
            >
              8
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
